# constexpr_doublearray

./: .clang-format  .gitignore  CMakeLists.txt  README.md  constexpr_doublearray.hpp  dataset.hpp  demo.cpp  main.cpp  sample.cpp  txt2hpp.py  words.txt  words.txt.hpp
demo/: demo.cpp  txt2hpp.py  univs.txt
include/: constexpr_doublearray.hpp
sample/: runtime_sample.cpp  sample.cpp
